--- a/build.gradle
+++ b/build.gradle
@@ -17,14 +17,14 @@ tasks.withType(JavaCompile) {
 apply plugin: "net.minecraftforge.gradle.forge"
 
 version = "1.0.0"
-group = "fung.phoneaddon.autogg"
-archivesBaseName = "PhoneAddon"
+group = "fung.dungeonmod"
+archivesBaseName = "FungsDungeonMod"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 minecraft {
-    version = "1.8.9-11.15.1.1722"
+    version = "1.8.9-11.15.1.2318-1.8.9"
     runDir = "run"
     mappings = "stable_22"
     makeObfSourceJar = false
